# sqlx-prepare-test

./: Cargo.toml  sqlx-data.json
.github/: action.yml
.github/workflows/: action.yml
src/: catalogue.rs  main.rs
src/sql/: fetch_bids.sql
