[package]
name = "query_file_test"
version = "0.1.0"
authors = ["Laurens Kubat <Laurens.kubat@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uuid = { version = "0.8.2", features = ["serde", "v4"] }
anyhow = "1"
sqlx = { version = "0.5", default-features = false, features = [ "runtime-tokio-rustls", "macros", "postgres", "migrate", "offline", "uuid", "time", "json" ] }
testcontainers = "0.11.0"
tonic = { git = "https://github.com/alce/tonic", branch = "grpc-web"}
prost = "0.7"
thiserror = "1"
futures = "0.3"
serde_json = "1"
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
tokio = {version= "1", features = ["full", "macros"]}
